[Bugfix]- Fixed font and input text alignment.

--- a/frontend/src/pages/GroupDetail.css
+++ b/frontend/src/pages/GroupDetail.css
@@ -631,3 +631,10 @@ color: #d32f2f;
 .allsettled{
   color: #2d8103;
 }
+
+input::placeholder,
+textarea::placeholder {
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  color: #888;
+}
