--- a/frontend/src/pages/create_group/create_group.css
+++ b/frontend/src/pages/create_group/create_group.css
@@ -143,6 +143,5 @@ form div label {
 
 form div input,
 form div textarea {
-  width: 100%;
   text-align: left;
 }
